productreview/productreview-k8/productreview-deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: productreviewms-deploy
  namespace: shoppingportal
spec:
  replicas: 1
  selector:
    matchLabels:
      name: productreviewms
      zone: prod
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        name: productreviewms
        version: v1
        release: stable
        tier: be
        zone: prod
        managed-by: m2
    spec:
      containers:
        - name: productreviewms-ctr
          image: metamagicglobal/productreviewservice_k8
          imagePullPolicy: Always
          ports:
          - containerPort: 8082
