productreview/productreview-k8/productreview-destination.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: productreview-destination-rules
  namespace: shoppingportal    
spec:
  host: productreview-svc.shoppingportal.svc.cluster.local
  subsets:
  - name: stable
    labels:
      version: v1
